<resources>
    <string name="app_name">Mitfahrzentrale</string>

    <!-- Login -->
    <string name="btn_login">Login</string>
    <string name="btn_register">Registrieren</string>

    <!-- Navbar -->
    <string name="route_nav">Routen</string>
    <string name="drive_nav">Meine Fahrten</string>
    <string name="saved_nav">Gespeichert</string>
    <string name="settings_nav">Einstellungen</string>
    <string name="request_nav">Anfragen</string>

    <!-- Einstellungen -->
    <string name="logout">Abmelden</string>

    <!-- Login -->
    <string name="user_placeholder">Benutzername</string>
    <string name="pwd_placeholder">Login</string>

    <!-- Routen -->
    <string name="location_hint">Postleitzahl</string>

    <!-- Requests -->
    <string name="request_from">Angefragt von: </string>

    <!-- Driver -->
    <string name="start_hint">Start</string>
    <string name="destination_hint">Ziel</string>
    <string name="starttime_hint">Abfahrt</string>
    <string name="destinationtime_hint">Ankunft</string>
    <string name="new_ride">Fahrt erstellen</string>
    <string name="my_rides">Eigene Fahrten</string>
    <string name="approved_rides">Mitfahrten</string>
</resources>