<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background">


    <LinearLayout
        android:id="@+id/editLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userInput"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="false"
            android:hint="@string/user_placeholder"
            android:inputType="text"
            android:background="@color/Foreground2"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/pwd_placeholder"
            android:inputType="text"
            android:background="@color/Foreground2"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editLayout">

        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/register"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/btn_register"/>
    </LinearLayout>
</RelativeLayout>